--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ body {
   color: #222;
   text-align: center;
   font-size: 20px;
+  height: 100vh;
 }
 
 .container {
@@ -99,7 +100,7 @@ nav li a:hover {
   padding: 100px 20px;
   font-family: "Fraunces", serif;
   font-size: 40px;
-  background: lightgoldenrodyellow;
+  /* background: lightgoldenrodyellow; */
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -215,9 +216,177 @@ h2 {
 
 /* Guide */
 .guide {
-  margin: 50px auto;
+  margin: auto;
   font-family: "Fraunces", serif;
   font-size: 30px;
-  background-color: var(--gray);
+  background-color: lightcyan;
+  display: flex;
   width: 100%;
+  height: 450px;
+  padding: 30px;
+  border-radius: 15px;
+}
+
+.guide-image {
+  background-image: url("./images/shinji-kun.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 40%;
+  height: 100%;
+}
+
+.guide-text {
+  padding: 40px 0px 10px;
+  width: 60%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
+  text-align: left;
+}
+
+.text p {
+  margin: 30px 0px;
+  font-size: 24px;
+}
+
+.email {
+  width: 100%;
+  text-align: left;
+  margin-top: 10px;
+  display: flex;
+  position: relative;
+}
+
+input {
+  width: 80%;
+  height: 60px;
+  font-size: 18px;
+  border-radius: 5px;
+  border: none;
+  padding-left: 13px;
+  display: inline-block;
+}
+
+input:focus {
+  outline: none;
+  border: 0.5px solid var(--teal);
+}
+
+#subsribe {
+  width: 20%;
+  height: 60px;
+  font-size: 18px;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  border: 0.5px solid var(--teal);
+  background-color: var(--teal);
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  position: absolute;
+  right: 100px;
+  transition: all 0.3s ease;
+}
+
+#subsribe:hover {
+  background-color: var(--brownpurple);
+  border: 0.5px solid var(--brownpurple);
+}
+
+footer {
+  width: 100%;
+  height: fit-content;
+  color: #222;
+  font-family: "Nunito Sans", sans-serif;
+  font-weight: bold;
+  font-size: 18px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 80px 0px 0px;
+  list-style-type: none;
+  position: relative;
+}
+
+.footer-upper {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 40px;
+  padding: 0px 40px;
+  position: relative;
+  z-index: 2;
+}
+
+.footer-links {
+  list-style: none;
+}
+
+.footer-links ul {
+  list-style: none;
+  text-align: left;
+
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.footer-links ul li a {
+  color: #222;
+  transition: all 0.3s ease;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.footer-links ul li a:hover {
+  color: var(--lightred);
+}
+
+.footer-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 16px;
+  width: 100%;
+  align-items: center;
+}
+
+.footer-icons {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-icons img {
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.footer-icons img:hover {
+  transform: scale(1.1);
+  color: var(--lightred);
+}
+
+.footer-lower {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: 3;
+  background-color: transparent;
+  position: relative;
+  margin-top: -50px;
+}
+
+.footer-image {
+  width: 100%;
+  height: 570px;
+  background-image: url("./images/footer-bg.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
