--- a/styles.css
+++ b/styles.css
@@ -28,16 +28,35 @@ body {
   display: flex;
   flex-direction: column;
   /* background: lightgoldenrodyellow; */
-  width: 1200px;
+  width: 100%;
+  max-width: 1200px;
+  height: fit-content;
   height: fit-content;
 }
 
 /* Navbar */
 nav {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
   flex-direction: row;
-  justify-content: center;
   font-family: "Nunito Sans", sans-serif;
+}
+
+.nav-logo {
+  border: 3px solid #222;
+  padding: 10px;
+  border-radius: 50%;
+  transition: all 0.1s ease;
+}
+.nav-logo img {
+  height: 40px;
+  width: 40px;
+}
+
+.nav-logo:hover {
+  transform: scale(1.1);
 }
 
 nav ul {
@@ -46,21 +65,71 @@ nav ul {
   list-style: none;
   gap: 80px;
   font-weight: bold;
-  margin-top: 20px;
+  margin: 0;
+  padding: 0;
 }
 
 nav li a {
   color: #222;
+  text-decoration: none;
+  transition: color 0.3s ease;
 }
 
 nav li a:hover {
   color: var(--lightred);
 }
 
+.nav-buttons {
+  display: flex;
+  gap: 0.6rem;
+}
+
+.btn {
+  padding: 0.8rem 1.4rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1.2rem;
+  transition: background-color 0.3s ease;
+  font-weight: bold;
+  font-family: Arial, sans-serif;
+}
+
+.btn-primary {
+  background-color: var(--teal);
+  color: #fff;
+}
+
+.btn-primary:hover {
+  background-color: var(--lightred);
+}
+
+.btn-secondary {
+  background-color: transparent;
+  transition: all 0.3s ease;
+}
+
+.btn-secondary:hover {
+  color: var(--lightred);
+}
+
+/* Media Queries */
+
+@media (max-width: 999px) {
+}
+@media (max-width: 768px) {
+}
+
+@media (max-width: 480px) {
+}
+
 /* Hero section */
 .hero {
   margin: 250px auto 0px;
   position: relative;
+}
+
+.hero-text {
 }
 
 .hero .hero-heading {
@@ -309,13 +378,15 @@ footer {
   padding: 80px 0px 0px;
   list-style-type: none;
   position: relative;
+  /* background-color: rgb(255, 255, 232); */
+  border-radius: 12px;
 }
 
 .footer-upper {
   display: flex;
   justify-content: space-between;
   margin-bottom: 40px;
-  padding: 0px 40px;
+  padding: 0px 80px;
   position: relative;
   z-index: 2;
 }
@@ -327,10 +398,9 @@ footer {
 .footer-links ul {
   list-style: none;
   text-align: left;
-
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 13px;
 }
 
 .footer-links ul li a {
@@ -348,7 +418,7 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  font-size: 16px;
+  font-size: 17px;
   width: 100%;
   align-items: center;
 }
