--- a/styles.css
+++ b/styles.css
@@ -378,7 +378,7 @@ footer {
   padding: 80px 0px 0px;
   list-style-type: none;
   position: relative;
-  /* background-color: rgb(255, 255, 232); */
+  background-color: rgb(255, 255, 232);
   border-radius: 12px;
 }
 
