--- a/styles.css
+++ b/styles.css
@@ -16,12 +16,14 @@
 body {
   font-family: "Nunito Sans", sans-serif;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  margin: 60px auto;
+  margin: 20px auto 0px;
   color: #222;
   text-align: center;
   font-size: 20px;
-  height: 100vh;
+  min-height: 100vh;
+  /* border: 1px solid black; */
 }
 
 .container {
@@ -29,12 +31,21 @@ body {
   flex-direction: column;
   /* background: lightgoldenrodyellow; */
   width: 100%;
-  max-width: 1200px;
+  max-width: 80%;
+  /* max-width: 1600px; */
   height: fit-content;
-  height: fit-content;
+  border: 1px solid black;
 }
 
 /* Navbar */
+#navbar {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 1rem 0rem;
+  border-bottom: 1px solid #222;
+}
+
 nav {
   display: flex;
   justify-content: space-between;
@@ -42,6 +53,8 @@ nav {
   padding: 1rem 2rem;
   flex-direction: row;
   font-family: "Nunito Sans", sans-serif;
+  width: 80%;
+  max-width: 1600px;
 }
 
 .nav-logo {
@@ -114,53 +127,150 @@ nav li a:hover {
 }
 
 /* Media Queries */
+@media (max-width: 1200px) {
+  nav {
+    width: 95%;
+  }
 
-@media (max-width: 999px) {
+  .nav-links {
+    gap: 40px;
+  }
 }
+
+@media (max-width: 992px) {
+  #navbar {
+    display: none;
+  }
+
+  /* Mobile Navbar */
+  #mobile-navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 2rem;
+    flex-direction: row;
+    font-family: "Nunito Sans", sans-serif;
+    width: 100%;
+    height: 100px;
+    max-width: 1000px;
+    padding-bottom: 25px;
+    border-bottom: 1px solid #c5c5c5;
+    position: relative;
+  }
+
+  .mobile-navbar-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 1000px;
+  }
+
+  .nav-logo {
+    position: absolute;
+    text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .nav-logo img {
+    width: 40px;
+    height: 40px;
+  }
+  .mobile-menu-btn img {
+    padding-top: 10px;
+  }
+
+  .menu-icon {
+    width: 50px;
+    height: 50px;
+  }
+}
+
 @media (max-width: 768px) {
-}
+  .nav-links {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
 
-@media (max-width: 480px) {
+  .nav-buttons {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 /* Hero section */
 .hero {
-  margin: 250px auto 0px;
+  margin: 350px auto;
+  width: 100%;
+  height: auto;
   position: relative;
 }
 
+.hero-background {
+  width: 100%;
+  padding-top: 56.25%;
+  /* 16:9 aspect ratio */
+  background-image: url("./images/osaka-hero2.png");
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  z-index: 1;
+}
+
+.hero-content {
+  position: absolute;
+  top: -27%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  text-align: center;
+  padding: 150px 0;
+}
+
 .hero-text {
+  text-align: center;
+  width: 100%;
+  left: 0;
 }
 
 .hero .hero-heading {
-  font-size: 180px;
+  font-size: 200px;
   text-transform: uppercase;
-  position: absolute;
-  top: -20%;
-  left: 300px;
   text-align: center;
   font-family: "Fraunces", serif;
   font-weight: 800;
   letter-spacing: 2px;
-  z-index: 2;
 }
 
 .hero h3 {
-  font-size: 50px;
-  padding-top: 40px;
+  font-size: 40px;
   text-align: center;
   font-family: "Fraunces", serif;
   font-weight: 600;
   letter-spacing: 2px;
-  z-index: 2;
 }
 
-.hero-image {
-  width: 100%;
-  max-width: 1200px;
-  position: relative;
-  bottom: -20px;
-  z-index: 1;
+@media (max-width: 1200px) {
+  .hero .hero-heading {
+    font-size: 120px;
+  }
+
+  .hero h3 {
+    font-size: 36px;
+  }
+}
+
+@media (max-width: 768px) {
+  .hero .hero-heading {
+    font-size: 80px;
+  }
+
+  .hero h3 {
+    font-size: 24px;
+  }
 }
 
 /* Featured Cards */
@@ -289,13 +399,23 @@ h2 {
   font-family: "Fraunces", serif;
   font-size: 30px;
   background-color: lightcyan;
-  display: flex;
   width: 100%;
-  height: 450px;
+  display: flex;
+  justify-content: center;
+  height: 500px;
   padding: 30px;
   border-radius: 15px;
+  align-items: center;
 }
 
+.guide-container {
+  display: flex;
+  max-width: 1200px;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 .guide-image {
   background-image: url("./images/shinji-kun.png");
   background-size: contain;
@@ -362,13 +482,45 @@ input:focus {
 }
 
 #subsribe:hover {
-  background-color: var(--brownpurple);
-  border: 0.5px solid var(--brownpurple);
+  background-color: var(--lightred);
+  border: 0.5px solid var(--lightred);
 }
 
+@media (max-width: 768px) {
+  .guide-container {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .guide-image,
+  .guide-text {
+    width: 100%;
+    height: auto;
+  }
+
+  .guide-image {
+    margin-bottom: 30px;
+  }
+
+  .email {
+    flex-direction: column;
+  }
+
+  input,
+  #subsribe {
+    width: 100%;
+    border-radius: 5px;
+  }
+
+  #subsribe {
+    margin-top: 10px;
+  }
+}
+
+/* Footer */
 footer {
   width: 100%;
-  height: fit-content;
+  height: auto;
   color: #111;
   font-family: "Nunito Sans", sans-serif;
   font-weight: bold;
@@ -381,15 +533,38 @@ footer {
   position: relative;
   background-color: rgb(255, 255, 232);
   border-radius: 12px;
+  position: relative;
+}
+
+.footer-image {
+  width: 100%;
+  height: 100px;
+  padding-top: 56%;
+  /* 16:9 aspect ratio */
+  background-image: url("./images/footer-bg2.png");
+  background-size: stretch;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  z-index: 1;
+}
+
+.footer-content {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  position: relative;
+  padding: 60px 20px 30px;
 }
 
 .footer-upper {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
   padding: 0px 80px;
-  position: relative;
   z-index: 2;
+  width: 100%;
+  align-items: center;
 }
 
 .footer-links {
@@ -401,7 +576,8 @@ footer {
   text-align: left;
   display: flex;
   flex-direction: column;
-  gap: 13px;
+  gap: 20px;
+  font-family: "Nunito Sans", sans-serif;
 }
 
 .footer-links ul li a {
@@ -419,7 +595,7 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  font-size: 17px;
+  font-size: 15px;
   width: 100%;
   align-items: center;
 }
@@ -432,8 +608,8 @@ footer {
 }
 
 .footer-icons img {
-  width: 25px;
-  height: 25px;
+  width: 30px;
+  height: 30px;
   cursor: pointer;
   transition: all 0.3s ease;
 }
@@ -443,21 +619,20 @@ footer {
   color: var(--lightred);
 }
 
-.footer-lower {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  z-index: 3;
-  background-color: transparent;
-  position: relative;
-  margin-top: -40px;
-}
+@media (max-width: 899px) {
+  .footer-upper {
+    flex-direction: column;
+    gap: 40px;
+    padding: 0px 40px !important;
+  }
 
-.footer-image {
-  width: 100%;
-  height: 570px;
-  background-image: url("./images/footer-bg.png");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  .footer-links ul {
+    text-align: center;
+    font-size: 16px;
+  }
+
+  .footer-links ul li {
+    text-align: center;
+    font-size: 16px;
+  }
 }
