--- a/styles.css
+++ b/styles.css
@@ -528,7 +528,7 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 60px 0px 0px;
+  padding: 50px 0px 0px;
   list-style-type: none;
   position: relative;
   background-color: rgb(255, 255, 232);
@@ -542,7 +542,7 @@ footer {
   padding-top: 56%;
   /* 16:9 aspect ratio */
   background-image: url("./images/footer-bg2.png");
-  background-size: stretch;
+  background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
