--- a/styles.css
+++ b/styles.css
@@ -393,6 +393,51 @@ h2 {
   background-color: var(--teal);
 }
 
+@media (max-width: 1200px) {
+  .cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 768px) {
+  .featured-cards {
+    padding: 120px 0px !important;
+  }
+
+  h2 {
+    font-size: 40px;
+  }
+  .cards {
+    grid-template-columns: 1fr;
+    gap: 30px;
+    width: 100%;
+  }
+  .card {
+    width: 90%;
+    max-width: 600px;
+    height: 500px;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 480px) {
+  .featured-cards {
+    padding: 30px 10px;
+  }
+
+  h2 {
+    font-size: 28px;
+  }
+
+  .card {
+    height: 350px;
+  }
+
+  .card h4 {
+    font-size: 28px;
+  }
+}
+
 /* Guide */
 .guide {
   margin: auto;
