--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,11 @@ nav li a:hover {
   color: var(--lightred);
 }
 
+/* Mobile Navbar */
+#mobile-navbar {
+  display: none;
+}
+
 /* Media Queries */
 @media (max-width: 1200px) {
   nav {
@@ -139,7 +144,7 @@ nav li a:hover {
 
 @media (max-width: 992px) {
   #navbar {
-    display: none;
+    display: none !important;
   }
 
   /* Mobile Navbar */
