--- a/styles.css
+++ b/styles.css
@@ -206,7 +206,13 @@ nav li a:hover {
 }
 
 /* Mobile Menu Overlay */
-#mobile-menu-overlay {
+#overlay {
+  display: none;
+}
+
+#overlay.active {
+  display: block;
+  opacity: 1;
   position: fixed;
   top: 0;
   left: 0;
@@ -219,15 +225,11 @@ nav li a:hover {
   transition: opacity 0.3s cubic-bezier(0.6, 0.4, 0, 1);
 }
 
-#mobile-menu-overlay.active {
-  opacity: 1;
-}
-
 /* Aside menu */
 #sidebar {
   position: fixed;
   top: 0;
-  left: 0;
+  left: -300px;
   width: 300px;
   height: 100vh;
   background-color: #ffffff;
@@ -239,6 +241,10 @@ nav li a:hover {
   transition: left 0.3s ease-in-out;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
   z-index: 2000 !important;
+}
+
+#sidebar.show-sidebar {
+  left: 0;
 }
 
 .sidebar-container {
