--- a/styles.css
+++ b/styles.css
@@ -239,7 +239,14 @@ nav li a:hover {
   height: 100% !important;
   background-color: rgba(65, 66, 66, 0.45);
   z-index: 2002 !important;
-  transition: opacity 0.3s cubic-bezier(0.6, 0.4, 0, 1);
+  opacity: 0; /* start with 0 opacity */
+  transition: opacity 0.3s, visibility 0.3s ease;
+  visibility: hidden;
+}
+
+#modal-signin.show {
+  visibility: visible; /* fades in */
+  opacity: 1; /* show when active */
 }
 
 #modal-signin .overlay-content {
