change guide image to webp and update linkedin icon

--- a/styles.css
+++ b/styles.css
@@ -1121,7 +1121,7 @@ h2 {
   text-align: center;
 }
 .guide-image {
-  background-image: url("./images/shinji-kun.png");
+  background-image: url("./images/shinji-kun.webp");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
