--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,8 @@ nav {
   align-items: center;
   padding: 1rem 2rem;
   flex-direction: row;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: "Fraunces", sans-serif;
+
   width: 80%;
   max-width: 1600px;
 }
@@ -78,7 +79,7 @@ nav ul {
   flex-direction: row;
   list-style: none;
   gap: 80px;
-  font-weight: bold;
+  font-weight: 500;
   margin: 0;
   padding: 0;
 }
@@ -1275,7 +1276,7 @@ h2 {
 
 .guide-text {
   padding: 40px 40px 0px 10px;
-  width: 60%;
+  width: 50%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -1286,7 +1287,7 @@ h2 {
 
 .text p {
   margin: 30px 0px;
-  font-size: 24px;
+  font-size: 22px;
   color: #222;
 }
 
@@ -1389,8 +1390,8 @@ footer {
   width: 100%;
   height: auto;
   color: #111;
-  font-family: "Nunito Sans", sans-serif;
-  font-weight: bold;
+  font-family: "Fraunces", sans-serif;
+  font-weight: 700;
   font-size: 18px;
   display: flex;
   flex-direction: column;
@@ -1445,7 +1446,7 @@ footer {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: "Fraunces", sans-serif;
 }
 
 .footer-links ul li a {
@@ -1453,6 +1454,7 @@ footer {
   transition: all 0.3s ease;
   cursor: pointer;
   font-size: 18px;
+  font-weight: 500;
 }
 
 .footer-links ul li a:hover {
