--- a/styles.css
+++ b/styles.css
@@ -930,23 +930,22 @@ nav li a:hover {
   align-items: center;
   justify-content: center;
   margin: 100px auto 80px;
-  gap: 20px;
+  gap: 30px;
   width: 100%;
   max-width: 1200px;
   font-family: "Fraunces", serif;
 }
 
 .description-image {
-  position: relative;
-  display: flex;
   flex: 1;
 }
 
 .description-image .image-1,
 .description-image .image-2 {
-  width: 50%;
+  width: 100%;
   height: 100%;
   object-fit: cover;
+  background-position: center;
 }
 
 .description-content {
@@ -961,6 +960,20 @@ nav li a:hover {
 .description-content h2 {
   font-size: 70px;
   text-transform: uppercase;
+}
+
+.description-content ul li {
+  list-style: none;
+  gap: 10px;
+  display: flex;
+}
+.description-content ul li > img {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+  vertical-align: middle;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Wave divider */
@@ -991,7 +1004,7 @@ nav li a:hover {
 
 .wave-path {
   stroke: #dd7a6f;
-  stroke-width: 2;
+  stroke-width: 3;
   fill: none;
   animation: moveWave 2s linear infinite;
 }
