--- a/styles.css
+++ b/styles.css
@@ -997,10 +997,55 @@ nav li a:hover {
 .description-content ul li > img:hover {
   transform: scale(1.1);
   cursor: pointer;
+  object-fit: contain;
 }
 
 .description-content p:last-child {
   font-size: 22px;
+}
+
+/* Media Queries for fine-tuning */
+@media (max-width: 1024px) {
+  .description {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 60px;
+    width: 100%;
+    max-width: 1600px;
+    text-align: center;
+  }
+
+  .description-image {
+    max-width: 100%;
+    padding: 0 20px;
+  }
+
+  .description-content {
+    max-width: 100%;
+    padding: 0 20px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (max-width: 599px) {
+  .description-content h2 {
+    font-size: 50px;
+  }
+  .description-content h3 {
+    margin-bottom: 12px;
+  }
+  .description-content p {
+    font-size: 18px;
+  }
+  .description-content ul li {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 480px) {
 }
 
 /* Wave divider */
@@ -1044,6 +1089,13 @@ nav li a:hover {
     transform: translateX(-50px);
   }
 }
+
+@media (max-width: 820px) {
+  .wave-container {
+    width: 85%;
+  }
+}
+
 /* Featured Cards */
 .featured-cards {
   margin: 0 auto;
